Change main to div#root

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>CV App</title>
 </head>
 <body>
-    <main>
+    <div id="root">
         <div class="a4">
             <h1 class="full-name">Jonathan Widarsa</h1>
             <p class="personal-info">
@@ -145,6 +145,6 @@
           Skills:
           <textarea class="input-skill" placeholder="- Javascript | HTML | CSS | React | Node.js | Express | MongoDB"></textarea>
         </label>
-    </main>
+      </div>
 </body>
 </html>
