Add edit/del under description input

--- a/template.html
+++ b/template.html
@@ -141,6 +141,14 @@
           <button class="to-leader">Leadership Experience</button>
         </div>
 
+        <ul class="data-container">
+            <li class="data">
+                Nanyang Technological University
+                <img src="./src/assets/pencil-edit.svg" alt="edit">
+                <img src="./src/assets/trash-can.svg" alt="delete">
+            </li>
+        </ul>
+
         <label for="" class="insert skill-section">
           Skills:
           <textarea class="input-skill" placeholder="- Javascript | HTML | CSS | React | Node.js | Express | MongoDB"></textarea>
